--- a/Todoey2/Base.lproj/Main.storyboard
+++ b/Todoey2/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="LQs-eM-dn3" id="ApP-F0-PPN"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="O5y-2K-4rO"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="O5y-2K-4rO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="xfU-2q-GCB">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="LQs-eM-dn3" id="PsD-Qq-I5K"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bcE-Gy-x95" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
